<resources>
    <string name="app_name">NHS COVID-19</string>
    <string name="app_title">COVID-19</string>
    <string name="onboarding_title">This NHS app does three things for you:</string>
    <string name="onboarding_first_bullet_text">It lets you know if you have been near someone who now has coronavirus</string>
    <string name="onboarding_second_bullet_text">It links you to up-to-date guidance on coronavirus that is relevant to your situation</string>
    <string name="onboarding_third_bullet_text">It lets you book a test if you have certain symptoms of coronavirus</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="location_rationale">You will not be tracked and your personal identity and location history will
        remain protected at all times. On an Android phone, your location permission is needed for Bluetooth to work.
    </string>
    <string name="explanation_link"><u>Learn more about how the app works</u></string>
    <string name="bluetooth_rationale">This app uses battery-saving Bluetooth Low Energy to determine when it is near
        another phone with this app. For this app to work, Bluetooth needs to be kept on at all times.
    </string>
    <string name="status_exposed_title">You have been near someone who has tested positive for coronavirus. Please self-isolate.</string>
    <string name="status_positive_test_title">Your test result indicates  you  have coronavirus. Please isolate yourself and your household.</string>
    <string name="default_notification_channel_id" translatable="false">colocate-locate</string>
    <string name="default_notification_channel_name">General</string>
    <string name="foreground_service_channel_id" translatable="false">colocate-foreground-service</string>
    <string name="foreground_service_channel_name">Application service</string>
    <string name="permissions_and_access_channel_id" translatable="false">colocate-permissions-and-access</string>
    <string name="permissions_and_access_channel_name">Bluetooth and location reminders</string>
    <string name="contact_and_checkin_channel_id" translatable="false">colocate-contact-and-checkin</string>
    <string name="contact_and_checkin_channel_name">Coronavirus notifications</string>
    <string name="start_main_activity">Start main activity</string>
    <string name="contact_alert_notification_title">Your advice has changed</string>
    <string name="contact_alert_notification_text">Please open the app to learn what to do next. Your help saves lives.</string>
    <string name="test_result_notification_title">Your test result has arrived</string>
    <string name="test_result_notification_text">Please open the app to learn what to do next. You have been sent an email or text with more information.</string>
    <string name="permission_title">Set up app permissions</string>
    <string name="bluetooth_rationale_title">Bluetooth</string>
    <string name="permission_rationale_title">Location</string>
    <string name="continue_button">Continue</string>
    <string name="explanation_title">How the app works</string>
    <string name="explanation_how_p1">This app gives you advice if you have been near someone who tested positive for coronavirus after reporting symptoms. The app uses your phone to detect other app users nearby.</string>
    <string name="explanation_how_p2">If you think you have coronavirus symptoms you can add them in this app. If you then test positive, the NHS will let others know they have been near someone who has tested positive for coronavirus.</string>
    <string name="explanation_how_p3">Your identity is not shared with other app users. The NHS will protect your identity. All information is stored securely.</string>
    <string name="explanation_more_about_the_app"><u>More about the app</u></string>
    <string name="explanation_privacy_notice"><u>Privacy notice</u></string>
    <string name="explanation_terms_of_use"><u>Terms of use</u></string>
    <string name="go_back">Go back</string>
    <string name="for_debug_purposes_only">For debug purposes only. Your sonar Id is:</string>
    <string name="notification_bluetooth_disabled_title">Please turn Bluetooth on</string>
    <string name="notification_bluetooth_disabled_text">This app can only protect you and others if Bluetooth is on all the time</string>
    <string name="notification_bluetooth_disabled_action">Enable Bluetooth</string>
    <string name="notification_location_disabled_title">Please turn Location on</string>
    <string name="notification_location_disabled_text">This app can only protect you and others if Location is on all the time</string>
    <string name="notification_location_disabled_action">Go to your Settings</string>
    <string name="temperature_question">Do you have a high temperature (fever)?</string>
    <string name="temperature_question_simplified">Do you have a high temperature (fever)?</string>
    <string name="temperature_description">This means that you feel hot to touch on your chest or back (you do not need to measure your temperature).\n\nYour response to this question helps us decide whether you need to book a coronavirus test.</string>
    <string name="temperature_description_simplified">This means that you feel hot to touch on your chest or back (you do not need to measure your temperature)</string>
    <string name="yes_temperature">Yes, I have a high temperature</string>
    <string name="no_temperature">No, I do not have a high temperature</string>
    <string name="cough_question">Do you have a new continuous cough?</string>
    <string name="cough_question_simplified">Do you have a continuous cough?</string>
    <string name="cough_description">This means coughing a lot for more than an hour, or 3 or more coughing episodes in 24 hours (if you usually have a cough, it may be worse than usual).\n\nYour response to this question helps us decide whether you need to book a coronavirus test.</string>
    <string name="cough_description_simplified">This means coughing a lot for more than an hour, or 3 or more coughing episodes in 24 hours (if you usually have a cough, it may be worse than usual).</string>
    <string name="yes_new_cough">Yes, I have a new continuous cough</string>
    <string name="no_new_cough">No, I do not have a new continuous cough</string>
    <string name="yes_cough">Yes, I have a continuous cough</string>
    <string name="no_cough">No, I do not have a continuous cough</string>
    <string name="anosmia_question">Have you had a new loss or change to your sense of smell or taste?</string>
    <string name="anosmia_question_simplified">Have you had a loss or change to your sense of smell or taste?</string>
    <string name="anosmia_description">This means you have noticed you cannot smell or taste anything, or things smell or taste different to normal.\n\nYour response to this question helps us decide whether you need to book a coronavirus test.</string>
    <string name="anosmia_description_simplified">This means you have noticed you cannot smell or taste anything, or things smell or taste different to normal.</string>
    <string name="yes_new_anosmia">Yes, I have a new loss or change to my sense of smell or taste</string>
    <string name="yes_anosmia">Yes, I have a loss or change to my sense of smell or taste</string>
    <string name="no_new_anosmia">No, I do not have a new loss or change to my sense of smell or taste</string>
    <string name="no_anosmia">No, I do not have a loss or change to my sense of smell or taste</string>
    <string name="sneeze_question">Do you have a runny nose, feel feverish or suffer from sneezing?</string>
    <string name="sneeze_question_simplified">Do you have a runny nose, feel feverish or suffer from sneezing?</string>
    <string name="sneeze_description">Runny nose: this means your nose is more runny than usual.\n\nFeeling feverish: this means you have sore or aching muscles, feel unusually tired, have a headache or are shivering or feeling warm or hot.\n\nSneezing: this means you are sneezing more than normal, not caused by any known allergy.\n\nYour response to this question helps the NHS better understand coronavirus.</string>
    <string name="sneeze_description_simplified">Runny nose: this means your nose is more runny than usual.\n\nFeeling feverish: this means you have sore or aching muscles, feel unusually tired, have a headache or are shivering or feeling warm or hot.\n\nSneezing: this means you are sneezing more than normal, not caused by any known allergy.</string>
    <string name="stomach_question">Do you have diarrhoea, nausea, vomiting or have a loss of appetite?</string>
    <string name="stomach_question_simplified">Do you have diarrhoea, nausea, vomiting or have a loss of appetite?</string>
    <string name="stomach_description">Diarrhoea: this means your poo has been more runny or watery than normal.\n\nNausea: this means you are feeling sick.\n\nVomiting: this means you have been sick more than once.\n\nLoss of appetite: this means you are not feeling hungry, or are not eating as much as normal.\n\nYour response to this question helps the NHS better understand coronavirus.</string>
    <string name="stomach_description_simplified">Diarrhoea: this means your poo has been more runny or watery than normal.\n\nNausea: this means you are feeling sick.\n\nVomiting: this means you have been sick more than once.\n\nLoss of appetite: this means you are not feeling hungry, or are not eating as much as normal.</string>
    <string name="yes_to_symptoms">Yes, I have at least one of these symptoms</string>
    <string name="no_to_symptoms">No, I do not have any of these symptoms</string>
    <string name="submit">Submit</string>
    <string name="radio_button_symptoms_error">Select yes if you have at least one of these symptoms</string>
    <string name="radio_button_anosmia_error">Select yes if you have recently lost your sense of smell or taste</string>
    <string name="radio_button_temperature_error">Select yes if you have a high temperature</string>
    <string name="radio_button_cough_error">Select yes if you have a continuous cough</string>
    <string name="add_my_symptoms">Add my symptoms</string>
    <string name="progress_one_sixth">1/6</string>
    <string name="progress_two_sixth">2/6</string>
    <string name="progress_three_sixth">3/6</string>
    <string name="progress_four_sixth">4/6</string>
    <string name="progress_five_sixth">5/6</string>
    <string name="progress_six_sixth">6/6</string>
    <string name="progress_one_fifth">1/5</string>
    <string name="progress_two_fifth">2/5</string>
    <string name="progress_three_fifth">3/5</string>
    <string name="progress_four_fifth">4/5</string>
    <string name="status_today_feeling">How are you feeling today?</string>
    <string name="close">Close</string>
    <string name="update_symptoms_prompt">Please update your symptoms to view your latest advice.</string>
    <string name="update_my_symptoms">Update my symptoms</string>
    <string name="no_symptoms">I no longer have symptoms</string>
    <string name="enable_bluetooth_rationale_p1">This app uses battery-saving Bluetooth Low Energy to determine when it is near another phone with this app installed. For this to work, Bluetooth needs to be kept on at all times.</string>
    <string name="enable_bluetooth_rationale_p2">Using Bluetooth means that the app cannot track your location and your privacy remains protected.</string>
    <string name="enable_bluetooth_rationale_p3">If you do not give permission for Bluetooth this app will not work.</string>
    <string name="enable_bluetooth_rationale_p4">To give permission for this app to access Bluetooth, please go to Settings and allow access.</string>
    <string name="reference_code">Reference code</string>
    <string name="loading">Loading…</string>
    <string name="page_4_of_6">Page 4 of 6</string>
</resources>