<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enableBluetoothDescriptionContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/enable_bluetooth_rationale_p1"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/enable_bluetooth_rationale_p2"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/enable_bluetooth_rationale_p3"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/enable_bluetooth_rationale_p4"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp" />

</LinearLayout>
