<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_isolate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_rounded_background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        style="@style/BottomSheetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:accessibilityHeading="true"
        android:text="@string/status_today_feeling"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_sub_title"
        android:textSize="16sp"
        android:text="@string/update_symptoms_prompt"/>


    <Button
        android:id="@+id/have_symptoms"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update_my_symptoms" />

    <Button
        android:id="@+id/no_symptoms"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/no_symptoms" />


</LinearLayout>
