<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 NHSX. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_isolate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.nhs.nhsx.sonar.android.app.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/nhsLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:baselineAlignBottom="true"
        android:contentDescription="@null"
        android:paddingVertical="4dp"
        android:scaleType="center"
        android:src="@drawable/nhs_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/app_title"
        android:textColor="?attr/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/nhsLogo"
        app:layout_constraintStart_toEndOf="@id/nhsLogo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/confirm_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/introMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/ic_onboarding_intro" />

            <uk.nhs.nhsx.sonar.android.app.AccessibilityTextView
                android:id="@+id/onboarding_title"
                style="@style/OnboardingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="33dp">

                <TextView
                    android:id="@+id/bullet_one"
                    style="@style/OnboardingBullet"
                    android:layout_marginTop="1dp"
                    android:text="@string/one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bullet_one_text"
                    style="@style/OnboardingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarding_first_bullet_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bullet_one"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/bullet_two"
                    style="@style/OnboardingBullet"
                    android:layout_marginTop="1dp"
                    android:text="@string/two"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bullet_two_text" />

                <TextView
                    android:id="@+id/bullet_two_text"
                    style="@style/OnboardingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:text="@string/onboarding_second_bullet_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bullet_two"
                    app:layout_constraintTop_toBottomOf="@+id/bullet_one_text" />

                <TextView
                    android:id="@+id/bullet_three"
                    style="@style/OnboardingBullet"
                    android:layout_marginTop="1dp"
                    android:text="@string/three"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/OnboardingText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:layout_toEndOf="@+id/bullet_three"
                    android:text="@string/onboarding_third_bullet_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bullet_three"
                    app:layout_constraintTop_toBottomOf="@+id/bullet_two_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/explanation_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/explanation_link"
                android:textColor="?attr/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_onboarding"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:minHeight="54dp"
        android:text="@string/continue_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
