<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottom_sheet_isolate"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bottom_sheet_rounded_background"
              android:orientation="vertical"
              android:paddingHorizontal="16dp"
              app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        style="@style/TextViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/reference_code"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/reference_code"
        android:text="@string/loading"/>

    <Button
        android:id="@+id/close"
        style="@style/SecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/close"/>
</LinearLayout>
